<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/body"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ContentDescription">


    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentStart="true" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:elevation="20dp" />


    <ScrollView
        android:id="@+id/sc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_l_2"
            android:backgroundTint="?android:attr/colorBackground"
            android:backgroundTintMode="src_over"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/commend"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="4dp"
                android:gravity="center"
                android:paddingStart="4dp"
                android:paddingTop="10dp"
                android:paddingEnd="4dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@android:color/background_dark" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1"
                android:padding="2dp"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:text="@string/commend"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="4dp"
                android:layout_weight="1"
                android:text="@string/download"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="16sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="4dp"
                android:layout_weight="1"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:gravity="bottom|center">

                <HorizontalScrollView
                    style="@android:style/Widget.Holo.ScrollView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clipToPadding="true"
                    android:fillViewport="true">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageButton
                            android:id="@+id/btnGithub"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:background="@drawable/ic_github"
                            android:contentDescription="@string/github"
                            android:maxWidth="50dp"
                            android:maxHeight="50dp"
                            android:scaleType="center"
                            android:visibility="gone" />

                        <ImageButton
                            android:id="@+id/btnEmail"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:background="@drawable/ic_message"
                            android:contentDescription="@string/email"
                            android:maxWidth="50dp"
                            android:maxHeight="50dp"
                            android:scaleType="center"
                            android:visibility="gone" />

                        <ImageButton
                            android:id="@+id/btnInsta"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:background="@drawable/ic_instagram"
                            android:contentDescription="@string/instagram"
                            android:maxWidth="50dp"
                            android:maxHeight="50dp"
                            android:scaleType="center"
                            android:visibility="gone" />

                        <ImageButton
                            android:id="@+id/btnWat"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:background="@drawable/ic_whatsapp"
                            android:contentDescription="@string/whatsup"
                            android:maxWidth="50dp"
                            android:maxHeight="50dp"
                            android:scaleType="center"
                            android:visibility="gone" />

                        <ImageButton
                            android:id="@+id/btnGoogle"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:background="@drawable/ic_google_play"
                            android:contentDescription="@string/google"
                            android:maxWidth="50dp"
                            android:maxHeight="50dp"
                            android:scaleType="center"
                            android:visibility="gone" />

                        <ImageButton
                            android:id="@+id/btnGRate"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"
                            android:background="@drawable/ic_grate"
                            android:contentDescription="@string/google_rate"
                            android:maxWidth="50dp"
                            android:maxHeight="50dp"
                            android:scaleType="center"
                            android:visibility="gone" />
                    </LinearLayout>
                </HorizontalScrollView>

            </TableRow>

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:background="@android:color/background_dark" />

            <ImageView
                android:id="@+id/myket_icon"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="3dp"
                android:src="@drawable/myket_128_b" />

            <TableLayout
                android:id="@+id/myket_table"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="16dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <ImageButton
                        android:id="@+id/btnDown"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="6dp"
                        android:background="@drawable/ic_download"
                        android:contentDescription="@string/download1"
                        android:gravity="center"
                        tools:ignore="ImageContrastCheck" />

                    <ImageButton
                        android:id="@+id/btnShare"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="6dp"
                        android:background="@drawable/ic_share"
                        android:contentDescription="@string/share1"
                        android:gravity="center" />

                    <ImageButton
                        android:id="@+id/btnCom"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="6dp"
                        android:background="@drawable/ic_good"
                        android:contentDescription="@string/rate"
                        android:gravity="center" />

                    <ImageButton
                        android:id="@+id/btnHelp"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="6dp"
                        android:background="@drawable/ic_customer_service"
                        android:contentDescription="@string/help1"
                        android:gravity="center" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="2dp"
                        android:gravity="center"
                        android:text="@string/download"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="2dp"
                        android:gravity="center"
                        android:text="@string/share"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="2dp"
                        android:gravity="center"
                        android:text="@string/commend"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="2dp"
                        android:gravity="center"
                        android:text="@string/help"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
                </TableRow>

            </TableLayout>

        </LinearLayout>
    </ScrollView>

    <ImageButton
        android:id="@+id/btnClose"
        style="@android:style/Widget.Holo.ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/shape_l"
        android:backgroundTint="@android:color/background_dark"
        android:contentDescription="@string/google"
        android:src="@android:drawable/ic_delete" />

    <ImageButton
        android:id="@+id/btnClose3"
        style="@android:style/Widget.Holo.ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="false"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/shape_l"
        android:contentDescription="@string/google"
        android:src="@android:drawable/ic_delete"
        android:visibility="invisible" />
</RelativeLayout>